ACLOCAL_AMFLAGS=-I m4
SUBDIRS = \
	src/ \
	bin/ \
  demos/communication_with_other_FIPA_compliant_agents/mc_to_jade_example \
  demos/getting_started/bluetooth \
  demos/getting_started/hello_world \
  demos/cspace-agentspace_interface/persistent_example \
  demos/cspace-agentspace_interface/agent_init_callback \
  demos/miscellaneous/multiple_agency_example \
  demos/miscellaneous/steer_example \
  demos/miscellaneous/agent_squad_test \
  demos/miscellaneous/assembly_simulation \
  demos/miscellaneous/mc_max_num_agents_example \
  demos/miscellaneous/prompt_example \
  demos/miscellaneous/mc_sample_app \
  demos/miscellaneous/simple_send \
  demos/miscellaneous/migration_tests_20090522 \
  demos/mobilec_security/agent_workgroup_example \
  demos/synchronization/cspace_mutex_example \
  demos/synchronization/agent_mutex_example \
  demos/synchronization/agent_semaphore_example \
  demos/synchronization/agent_cond_example \
  demos/synchronization/cspace_cond_example \
  demos/synchronization/mc_barrier_example \
  demos/agent_space_functionality/mc_df_example \
  demos/agent_space_functionality/mc_delete_agent_example \
  demos/agent_space_functionality/mc_df_service_test \
  demos/agent_space_functionality/agent_self_migrate \
  demos/agent_migration_message_format/multi_task_example2 \
  demos/agent_migration_message_format/multi_data_retrieval \
  demos/agent_migration_message_format/mc_array_return_example \
  demos/agent_migration_message_format/mc_migration_message_example \
  demos/agent_migration_message_format/agent_saved_variables_example \
  demos/agent_migration_message_format/agent_datastate_example \
  demos/FIPA_compliant_ACL_messages/jade_to_mc_example \
  demos/FIPA_compliant_ACL_messages/fipa_protocol \
  demos/FIPA_compliant_ACL_messages/fipa_comm \
  demos/FIPA_compliant_ACL_messages/fipa_test \
  demos/composing_agents/multi_task_example \
  demos/composing_agents/mc_compose_agent_example \
  demos/binary_stationary_agents/stationary_agent_communication \
  demos/binary_stationary_agents/stationary_agent_demo \
  demos/mobilec_c-space_functionality/cspace_misc_examples 

LDADD=./src/mxml-2.2.2/libmxml.a 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = mobilec.pc
