cmake_minimum_required(VERSION 2.6)

project(DEMOS)

include_directories($ENV{CHHOME}/extern/include)
include_directories(../src/include)

add_subdirectory(agent_migration_message_format/agent_datastate_example)
add_subdirectory(agent_migration_message_format/agent_saved_variables_example)
add_subdirectory(agent_migration_message_format/mc_array_return_example)
add_subdirectory(agent_migration_message_format/mc_migration_message_example)
add_subdirectory(agent_migration_message_format/multi_data_retrieval)
add_subdirectory(agent_migration_message_format/multi_task_example2)
add_subdirectory(agent_space_functionality/agent_self_migrate)
add_subdirectory(agent_space_functionality/mc_delete_agent_example)
add_subdirectory(agent_space_functionality/mc_df_example)
add_subdirectory(agent_space_functionality/mc_df_service_test)
add_subdirectory(binary_stationary_agents/stationary_agent_communication)
add_subdirectory(binary_stationary_agents/stationary_agent_demo)
add_subdirectory(communication_with_other_FIPA_compliant_agents/mc_to_jade_example)
add_subdirectory(composing_agents/mc_compose_agent_example)
add_subdirectory(composing_agents/multi_task_example)
add_subdirectory(cspace-agentspace_interface/agent_init_callback)
add_subdirectory(cspace-agentspace_interface/persistent_example)
add_subdirectory(FIPA_compliant_ACL_messages/fipa_comm)
add_subdirectory(FIPA_compliant_ACL_messages/fipa_protocol)
add_subdirectory(FIPA_compliant_ACL_messages/fipa_test)
add_subdirectory(FIPA_compliant_ACL_messages/jade_to_mc_example)
add_subdirectory(getting_started/bluetooth)
add_subdirectory(getting_started/hello_world)
add_subdirectory(miscellaneous/agent_file_attachment)
add_subdirectory(miscellaneous/agent_squad_test)
add_subdirectory(miscellaneous/assembly_simulation)
add_subdirectory(miscellaneous/mc_get_agents_example)
add_subdirectory(miscellaneous/mc_max_num_agents_example)
add_subdirectory(miscellaneous/mc_sample_app)
add_subdirectory(miscellaneous/message_box)
#add_subdirectory(miscellaneous/migration_tests_20090522)
add_subdirectory(miscellaneous/multiple_agency_example)
add_subdirectory(miscellaneous/prompt_example)
add_subdirectory(miscellaneous/simple_send)
add_subdirectory(miscellaneous/steer_example)
add_subdirectory(mobilec_c-space_functionality/cspace_misc_examples)
add_subdirectory(mobilec_security/agent_workgroup_example)
add_subdirectory(mobilec_security/hello_world_secure)
add_subdirectory(mobilec_security/multi_task_example_secure)
add_subdirectory(synchronization/agent_cond_example)
add_subdirectory(synchronization/agent_mutex_example)
add_subdirectory(synchronization/agent_semaphore_example)
add_subdirectory(synchronization/cspace_cond_example)
add_subdirectory(synchronization/cspace_mutex_example)
add_subdirectory(synchronization/mc_barrier_example)


